Fix icons not showing on local device

--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -101,10 +101,10 @@ p {
 .icon{
     width: 100%;
     height: 100%;
-    mask-position: center;
-    mask-repeat: no-repeat;
-    mask-size: 100%;
-    background-color: var(--text-primary);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    filter: invert(var(--icon-invert));
 }
 
 #workplace {
